about, events, index responsive done

--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -342,6 +342,9 @@ footer{
 		padding: 65px 0px 0px 0px ;
 		font-size: 35px;
 	}
+	.lockerroom{
+		display: inline;
+	}
 	.fac_photo{
 		height: 0%;
 		display: block;
