--- a/assets/css/offer.css
+++ b/assets/css/offer.css
@@ -113,7 +113,7 @@ body {
 	height: 380px;
 	border: 3px solid white;
 	background-color: #FFA805;
-
+    margin-top: 40px;
 }
 
 .btn {
@@ -124,8 +124,8 @@ body {
 
 .card-container {
 	display: flex;
+	flex-wrap: wrap;
 	justify-content: space-evenly;
-	height: 40vh;
 }
 
 .card-container h2 {
@@ -140,12 +140,12 @@ body {
 	text-align: center;
 }
 
-.card-container-2 {
+/* .card-container-2 {
 	display: flex;
 	justify-content: space-evenly;
 	height: 70vh;
 	padding-top: 150px;
-}
+} */
 
 .card-container .card .btn {
 	background-color: white;
@@ -159,7 +159,7 @@ body {
 	color: #ff5757;
 }
 
-.card-container-2 .card .btn {
+/* .card-container-2 .card .btn {
 	background-color: white;
 	border: none;
 	width: 130px;
@@ -169,26 +169,26 @@ body {
 	font-weight: 600;
 	font-size: 15px;
 	color: #ff5757;
-}
+} */
 
 .card-container img {
 	height: 200px;
 	width: 380px;
 }
 
-.card-container-2 img {
+/* .card-container-2 img {
 	height: 200px;
 	width: 380px;
-}
+} */
 
 .card-container .card a img:hover {
 	filter: brightness(0.5);
 }
-.card-container-2 .card a img:hover {
+/* .card-container-2 .card a img:hover {
 	filter: brightness(0.5);
-}
+} */
 
-.card-container-2 h2 {
+/* .card-container-2 h2 {
 	text-align: center;
 	font-family: 'Poppins', sans-serif;
 	color: white;
@@ -198,7 +198,7 @@ body {
 	text-align: center;
 	font-family: 'Poppins', sans-serif;
 	color: white;
-}
+} */
 
 
 
@@ -344,6 +344,9 @@ footer{
 	}
 	.header-logo{
 	margin: 0px;
+	}
+	.exciting{
+		padding: 90px 50px 0px 50px;
 	}
     .card-container{
 		flex-direction: column;
