--- a/assets/css/booknow.css
+++ b/assets/css/booknow.css
@@ -71,7 +71,7 @@ margin-top:10px;
 	padding: 14px 16px 14px 16px;
 	background-color: white;
 	margin: auto;
-	border:white;
+	border:1px solid #ffa51d;
 	color: #ffa51d;
 	
 }
@@ -98,6 +98,7 @@ margin-top:10px;
 }
 .search-information input{
 	padding: 10px;
+
 }
 .room{
 	font-family: 'poppins', sans-serif;
@@ -110,6 +111,7 @@ margin-top:10px;
 	display: flex;
 }
 .room-adult-children input{
+	text-align: center;
 	padding: 14px 10px 14px 10px;
     border: none;
 	margin: auto;
