--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -107,13 +107,80 @@ input {
 	background-color: #ffa51d;
 }
 .location{
-	padding: 50px 0px 0px 0px;
+	padding: 30px 0px 0px 0px;
 }
 
-
-
-
-
+/* faq css */
+.background{
+	background-color: #eee;
+	margin: 70px 0px 0px 0px;
+}
+.main-faq{
+	min-height: 80vh;
+	width: 80%;
+	margin: 0 auto;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+.title{
+	padding: 40px 0px 0px 0px;
+	/* text-align: center; */
+	font-size: 2rem;
+	margin: 2rem 0rem;
+	font-family: 'league spartan', sans-serif;
+}
+hr{
+	width: 60%;
+}
+.faq{
+	max-width: 700px;
+	/* margin-top: 2rem; */
+	padding-bottom: 0.3rem;
+	cursor: pointer;
+}
+.question{
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+.question h3{
+	font-size: 1.5rem;
+	font-family: 'poppins', sans-serif;
+}
+.answer p{
+	color: #838485;
+	font-family: 'league spartan', sans-serif;
+	padding-top: 1rem;
+	line-height:1.6 ;
+	font-size: 1.3rem;
+}
+.answer{
+	max-height: 0;
+	overflow: hidden;
+	transition: max-height 1.4s ease;
+}
+.faq.active .answer{
+	max-height: 300px;
+	animation: fade 1s ease-in-out;
+}
+.faq.active .i{
+	transform: rotate(90deg);
+}
+i{
+	transition: transform 0.5s ease;
+}
+@keyframes fade{
+	from{
+		opacity: 0;
+		transform: translateY(-10px);
+	}
+	to{
+		opacity: 1;
+		transform: translateY(0px);
+	}
+}
+/* faq completed */
 
 footer{
 	background-color: #121a21;
