--- a/assets/css/shop.css
+++ b/assets/css/shop.css
@@ -13,6 +13,7 @@ body{
 	align-items: center;
 	justify-content: space-evenly;
 	position: sticky;
+	box-shadow: 0 3px 6px 0 rgb(0 0 0 / 20%);
 	z-index: 1;
 
 }
@@ -37,6 +38,7 @@ body{
 .wrapper{
 	width: 1170px;
 	/* margin: 20px auto; */
+	display: none;
 }
 nav > ul{
 	position: relative;
@@ -123,6 +125,19 @@ nav ul.menu-area ul li a:hover{
 	display: flex;
 	justify-content: center;
 }
+.words{
+	font-family: 'league spartan', sans-serif;
+	font-size:x-large;
+	text-align: center;
+    color: #838485;
+	padding: 30px 0px 0px 0px ;
+}
+.h2-love{
+	text-align: center;
+}
+.shop-span{
+	color: black;
+}
 
 
 
@@ -136,6 +151,7 @@ nav ul.menu-area ul li a:hover{
 	border-radius: 120px;
 	background-color: antiquewhite;
 	padding: 80px;
+	text-align: center;
 }
 .circle h2{
 	font-family: 'open sans', sans-serif;
