--- a/assets/css/ticketprices.css
+++ b/assets/css/ticketprices.css
@@ -2,6 +2,44 @@ body{
 	margin:0;
 	padding: 0;
 }
+/* sidebar for mobile  */
+.sidenav {
+	height: 100%;
+	width: 0;
+	position: fixed;
+	z-index: 1;
+	top: 0;
+	left: 0;
+	background-color: #111;
+	overflow-x: hidden;
+	transition: 0.5s;
+	padding-top: 60px;
+	
+  }
+  .sidenav, .icon-bar{
+	display: none;
+  }
+  .sidenav a {
+	padding: 8px 8px 8px 32px;
+	text-decoration: none;
+	font-size: 25px;
+	color: #818181;
+	display: block;
+	transition: 0.3s;
+  }
+  
+  .sidenav a:hover {
+	color: #f1f1f1;
+  }
+  
+  .sidenav .closebtn {
+	position: absolute;
+	top: 0;
+	right: 25px;
+	font-size: 36px;
+	margin-left: 50px;
+  }
+/* sidebar mobile completed */
 .visit-signin{
 	display: flex;
 	justify-content: space-around;
@@ -282,4 +320,55 @@ footer{
 	font-family: 'poppins', sans-serif;
 	color: #eee;
 	padding: 20px;
+}
+
+
+
+
+@media screen and (max-width:450px) {
+	.sidenav, .icon-bar{
+		display: block;
+	}
+	.sidenav a{
+		color: white;
+		font-family: 'poppins', sans-serif;
+		font-size: medium;
+	}
+	.sidenav a:hover{
+		color: #ff5757;
+	}
+	.visit-signin, .navbar{
+		display: none;
+		/* display: flex;
+		justify-content: space-around;
+		width: 100%;
+		font-size: 8px; */
+	
+	}
+	.navbar ul li{
+		display: flex;
+		flex-direction: column;
+	}
+	.fa-bars:hover .navbar ul li {
+		display: block;
+	}
+	/* .icon-bar{
+		position: relative;
+		left: 5;
+	} */
+	.btn-book-now{
+		display: none;
+	}
+	
+	.header{
+		display: flex;
+		justify-content: space-around;
+		z-index: 3;
+		position: fixed;
+		background-color: #eee;
+		width: 100%;
+	}
+	.header-logo{
+		margin: 0px;
+	}
 }
