--- a/assets/signup for booking/create-an-account.css
+++ b/assets/signup for booking/create-an-account.css
@@ -11,7 +11,7 @@
 .sign-up{
     background-color:  rgb(249, 249, 249);
     width: 300px;
-    height: 830px;
+    height: 795px;
     border: 2px solid rgb(231, 224, 224);
     box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%), 0 6px 20px 0 rgb(0 0 0 / 19%);
     padding: 50px;
@@ -22,9 +22,10 @@
     width: 276px;
     border-radius: 3px;
     border: 2px solid #eee;
+    font-family: 'poppins', sans-serif;
     
 }
-.information-of-users input[type=text]:focus{
+/* .information-of-users input[type=text]:focus{
     outline: 2px solid #ff5757;
 }
 .information-of-users input[type=password]:focus{
@@ -35,6 +36,13 @@
 }
 .information-of-users input[type=date]:focus{
     outline: 2px solid #ff5757;
+} */ 
+.register input:focus{
+  outline: none;
+  border: 2.5px solid rgb(255, 23, 23);
+}
+.register input:valid{
+    border:2px solid green;
 }
 .sign-up button{
     padding: 10px;
