--- a/assets/signup for booking/signup.css
+++ b/assets/signup for booking/signup.css
@@ -21,12 +21,20 @@
     width: 276px;
     border: 2px solid #eee;
     border-radius: 3px;
+    font-family: 'poppins', sans-serif;
 }
-.sign-up input[type=email]:focus{
+/* .sign-up input[type=email]:focus{
     outline: 2px solid #ff5757;
 }
 .sign-up input[type=password]:focus{
     outline: 2px solid #ff5757;
+} */
+.signin-data input:focus{
+    outline: none;
+    border: 2.5px solid rgb(255, 23, 23);
+}
+.signin-data input:valid{
+    border:2px solid green;
 }
 .sign-up button{
     padding: 10px;
