--- a/assets/upcoming events css/folklore_festivel.css
+++ b/assets/upcoming events css/folklore_festivel.css
@@ -79,7 +79,7 @@ margin-top: 10px;
     padding: 60px 0px 0px 0px;
     font-size: 25px;
 }
-.numbers{
+/* .numbers{
     display: flex;
     justify-content: center;
 }
@@ -98,6 +98,35 @@ margin-top: 10px;
     padding: 0px 20px 0px 20px;
     font-family: 'poppins', sans-serif;
 
+} */
+.container{
+    width: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+
+}
+.timer-container{
+	/* margin-top: 2rem; */
+	border: 1px solid white;
+	width: 30%;
+	padding: 2rem;
+	display: flex;
+	text-align: center;
+	justify-content: space-between;
+	flex-wrap: wrap;
+	overflow: hidden;
+	box-sizing: border-box;
+	font-family: 'poppins', sans-serif;
+	font-size: 19px;
+}
+.timer-container p {
+    margin: 0 0.9rem;
+}
+
+.columns {
+    font-size: 2rem;
 }
 .background-color-2{
     width: 1485px;
