--- a/assets/homepage css/profile.css
+++ b/assets/homepage css/profile.css
@@ -1,3 +1,6 @@
+body{
+    margin: 0;
+}
 .visit-signin{
 	display: flex;
 	justify-content: space-around;
@@ -38,8 +41,9 @@ padding:10px;
 	padding:15px;
 	border:none;
 	margin-right:80px;
+    cursor: pointer;
 }
-.header button a{
+.header a button{
 	text-decoration: none;
 	color: #f6f6f6;
 }
