--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -394,7 +394,7 @@ footer{
 	background-color:#1DA1F2;
 }
 .instagram a:hover{
-	background-image: #E1306C;
+	background-color: #E1306C;
 	/* linear-gradient(315deg, pink, purple); */
 }
 .pinterest a:hover{
