--- a/assets/store css/cart.css
+++ b/assets/store css/cart.css
@@ -80,6 +80,14 @@ body{
     margin: 80px 0px 0px 1100px;
     
 }
+/* buttonplus&minus */
+.btn-sub, .btn-add{
+	padding: 14px 16px 14px 16px;
+	background-color: white;
+	border:white;
+	color: #ffa51d;
+	
+}
 .btn-shopping a{
     text-decoration: none;
     color: white;
