feat: updated features

--- a/assets/css/booknow.css
+++ b/assets/css/booknow.css
@@ -58,12 +58,12 @@ margin-top:10px;
 }
 .background-0{
 	width: 1485px;
-	height: 825px;
+	height: 925px;
 	background-color: #eee;
 }
 .background-color{
 	width: 1200px;
-    height: 610px;
+    height: 667px;
 	background-color: wheat;
 	margin-left: 165px;
 }
@@ -170,6 +170,187 @@ margin-top:10px;
 .facilities ul{
 	padding: 10px 5px 10px 5px ;
 }
+/* search css complete */
+
+
+/* rooms css start */
+.hotels-resorts{
+	font-family: 'poppins', sans-serif;
+	padding: 0px 0px 20px 20px;
+}
+.select-rooms{
+	font-family: 'league spartan', sans-serif;
+	color: #ff4612;
+}
+.photo-of-room{
+	padding-left: 30px;
+}
+
+.about{
+	padding-left: 30px;
+}
+.photo-of-room-about{
+	display: flex;
+	padding:20px 0px 0px 0px ;
+}
+.about h4{
+	font-family: 'league spartan', sans-serif;
+	font-size: 20px;
+}
+.about h3{
+	font-family: 'Poppins', sans-serif;
+}
+.about h5{
+	font-family: 'open sans', sans-serif;
+}
+.hurry{
+	margin: 0px 0px 0px 400px;
+	font-family: 'poppins', sans-serif;
+}
+.hurry span{
+	font-family: 'league spartan', sans-serif;
+	color: #ff5757;
+	font-size: 25px;
+}
+.hurry h5{
+	font-family: 'open sans', sans-serif;
+}
+.hurry p{
+	height: 30px;
+	width: 280px;
+	background-color: white;
+	color: #ff5757;
+	padding: 4px 0px 0px 0px;
+}
+.break-price-button{
+	display: flex;
+    justify-content: space-between;
+	align-items: center;
+	
+}
+.price{
+	padding: 0px 100px 0px 0px;
+	font-family: 'Poppins', sans-serif;
+}
+.price span{
+	font-family: 'league spartan', sans-serif;
+	color: #ff5757;
+	font-size: 25px;
+	padding: 0px 0px 10px 0px;
+}
+.price button{
+	background-color: #ffa51d;
+	padding: 15px 15px 15px 15px ;
+	border: none;
+	border-radius: 8px;
+	font-family: 'league spartan', sans-serif;
+	font-size: 15px;
+	color: #f6f6f6;
+	cursor: pointer;
+}
+
+.room-with-break{
+    font-family: 'open sans', sans-serif;
+	padding:0px 0px 0px 30px ;
+}
+.room-with-break g{
+	color: #ff5757;
+}
+
+.total-hotels-resorts-div{
+	display: none;
+}
+/* room css end */
+
+
+/* guest information css start */
+.guest-info{
+	font-family: 'league spartan', sans-serif;
+	color: #ff4612;
+	padding: 8px 0px 0px 30px;
+}
+.form input{
+       /* width: 100%; */
+    /* padding: 10px; */
+}
+.in-out{
+    display: flex;
+}
+.no-of, .room, .guest{
+    display: flex;
+    align-items: center;
+}
+.total-2, .total-3{
+    display: flex;
+    align-items: center;
+}
+.total, .total-room, .total-subtotal{
+    display: flex;
+    align-items: center;
+   
+}
+.overall{
+    display: flex;
+    justify-content: space-between;
+	align-items: center;
+}
+.over-1{
+	padding: 0px 0px 0px 50px;
+}
+.over-1 input{
+	padding: 10px;
+    width: 250px;
+    border: 2px solid #eee;
+    border-radius: 3px;
+    font-family: 'poppins', sans-serif;
+}
+.btn-book-now p{
+	font-family: 'open sans', sans-serif;
+	color: #ff4612;
+}
+.btn-book-now button{
+	padding: 15px 35px 15px 35px;
+	background-color: #ffa51d;
+	font-size: 15px;
+	color: white;
+	font-family: 'poppins', sans-serif;
+	border: none;
+	cursor: pointer;
+
+}
+.check-in, .check-out{
+    padding: 0px 100px 0px 0px ;
+}
+.no-of h4 {
+    padding: 0px 100px 0px 0px ;
+}
+.room h4{
+    padding: 0px 140px 0px 0px;
+}
+
+.guest h4{
+    padding: 0px 135px 0px 0px;
+}
+.total h4{
+    padding: 0px 170px 0px 0px ;
+}
+.total-room h4{
+    padding: 0px 170px 0px 0px ;
+}
+.total-subtotal h4{
+    padding: 0px 100px 0px 0px ;
+	text-align: right;
+    
+}
+.total-2 {
+    text-align: right;
+}
+table tr td{
+	padding: 0px 100px 10px 0px; 
+	font-family: 'poppins', sans-serif;
+
+}
+/* guest Information css end */
 
 
 .background-footer{
