feat: updated booking page

--- a/assets/book now css/guestinformation.css
+++ b/assets/book now css/guestinformation.css
@@ -119,7 +119,9 @@ table tr td{
     justify-content: center;
 	padding: 15px 0px 0px 0px ;
 }
-
+.important_datas{
+	font-family: 'open sans', sans-serif;
+}
 
 
 
