--- a/assets/homepage css/profile.css
+++ b/assets/homepage css/profile.css
@@ -47,6 +47,22 @@ padding:10px;
 	text-decoration: none;
 	color: #f6f6f6;
 }
+
+/* To back css like home, etc.., */
+.total-homepages-div{
+    padding: 35px 0px 0px 50px;
+    display: flex;
+}
+.homepages a {
+    font-family: 'poppins', sans-serif;
+    text-decoration: none;
+    color: #838285;
+}
+.homepages a:hover{
+    color: #ff5757;
+}
+/* completed */
+
 .image{
     display: flex;
     justify-content: space-around;
