--- a/assets/homepage css/user_orders.css
+++ b/assets/homepage css/user_orders.css
@@ -53,7 +53,7 @@ padding:10px;
     display: flex;
 }
 .homepages a {
-	font-family: 'poppins', sans-serif;
+    font-family: 'poppins', sans-serif;
     text-decoration: none;
     color: #838285;
 }
@@ -62,35 +62,70 @@ padding:10px;
 }
 /* completed */
 
-.font-your-tickets{
+.font-your-orders{
     text-align: center;
     font-family: 'league spartan', sans-serif;
     padding: 0px 30px 30px 30px;
     font-size: 2rem;
 }
 
-.background-image-fun-fair{
-    background-image: url(../../Screenshot\ \(376\).png);
-}
+/* .total-div-for-user-order{
+text-align: center;
+} */
 
-
-.total-div-for-ticket-detail{
-    display: flex;
-    justify-content: space-evenly;
-}
-.name-of-the-title{
-    font-family: 'poppins', sans-serif;
+.card {
+    width: 190px;
+    height: 254px;
+    border-radius: 5px;
+    background: #f5f5f5;
+    position: relative;
+    padding: 1.8rem;
+    border: 2px solid #c3c6ce;
+    transition: 0.5s ease-out;
+    overflow: visible;
+   }
+   
+   .card-details {
+    color: black;
+    height: 100%;
+    gap: -4.5em;
+    display: grid;
+    place-content: center;
+   }
+   
+   .card-button {
+    transform: translate(-50%, 125%);
+    width: 60%;
+    border-radius: 1rem;
+    border: none;
+    background-color: #008bf8;
+    color: #fff;
     font-size: 1rem;
-}
-.detail-from-user-to-buy{
-    font-family: 'open sans', sans-serif;
-    color: #838285;
-}
-
-.ticket-show{
-	border-bottom: 1px solid gray;
-    width: 100%;
-    display: flex;
-    /* flex-wrap: nowrap; */
-    justify-content: space-evenly;
-}
+    padding: .5rem 1rem;
+    position: absolute;
+    left: 50%;
+    bottom: 0;
+    opacity: 0;
+    transition: 0.3s ease-out;
+   }
+   
+   .text-body {
+    color: rgb(134, 134, 134);
+   }
+   
+   /*Text*/
+   .text-title {
+    font-size: 1.0em;
+    font-weight: bold;
+   }
+   
+   /*Hover*/
+   .card:hover {
+    border-color: #008bf8;
+    box-shadow: 0 4px 18px 0 rgba(0, 0, 0, 0.25);
+   }
+   
+   .card:hover .card-button {
+    transform: translate(-50%, 50%);
+    opacity: 1;
+   }
