feat: updated booking

--- a/assets/css/shop.css
+++ b/assets/css/shop.css
@@ -126,7 +126,7 @@ nav ul.menu-area ul li a:hover{
 	justify-content: center;
 }
 .words{
-	font-family: 'league spartan', sans-serif;
+	font-family: 'poppins', sans-serif;
 	font-size:x-large;
 	text-align: center;
     color: #838485;
