--- a/assets/css/booknow.css
+++ b/assets/css/booknow.css
@@ -1,4 +1,4 @@
-body{
+/* body{
 	margin:0;
 }
 .visit-signin{
@@ -6,7 +6,6 @@ body{
 	justify-content: space-around;
 	box-shadow: 0 3px 6px 0 rgb(0 0 0 / 20%);
 	font-family: 'poppins', sans-serif;
-	font-weight: 5px;
 	font-size: 16px;
 }
 .sign-in a{
@@ -55,6 +54,64 @@ margin-top:10px;
 	text-align: center;
 	font-size: 25px;
 	padding: 30px 0px 30px 0px;
+} */
+
+body{
+	margin:0;
+}
+.visit-signin{
+	display: flex;
+	justify-content: space-around;
+	box-shadow: 0 3px 6px 0 rgb(0 0 0 / 20%);
+	font-family: 'poppins', sans-serif;
+	font-weight: 5px;
+	font-size: 16px;
+}
+.sign-in a{
+	text-decoration: none;
+	
+}
+.header{ 
+	display:flex;
+	justify-content:space-between;
+	align-items:center;
+}
+.header-logo{
+	width:180px;
+	margin: 20px 0px 0px 50px ;
+}
+.navbar ul li{
+	display:inline;
+	margin:10px;
+}
+.navbar ul li a{
+font-family:'Open Sans', sans-serif;
+text-decoration:none;
+padding:10px;
+font-size:15px;
+margin-top:10px;
+}
+.navbar ul li a:hover {
+	border-bottom:3px solid #ff5757;
+} 
+.header button{
+	font-size:15px;	
+    background-color:#ff5757;
+	border-radius:8px;
+	padding:15px;
+	border:none;
+	margin-right:80px;
+	
+}
+.header button a{
+	text-decoration: none;
+	color: #f6f6f6;
+}
+.book-now{
+	font-family: 'league spartan', sans-serif;
+	text-align: center;
+	font-size: 25px;
+	padding: 30px 0px 30px 0px;
 }
 .background-0{
 	width: 1485px;
@@ -75,6 +132,13 @@ margin-top:10px;
 	color: #ffa51d;
 	
 }
+
+.price-for-adult-children{
+	display: flex; 
+	justify-content: space-around; 
+	font-family: 'poppins', sans-serif;
+}
+
 
 .search-availablity-information-msg{
 	display: flex;
