feat: gfc updated

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -346,6 +346,7 @@ height:auto;
 	font-family:'League Spartan', sans-serif;
 	font-size: 50px;
 }
+/* footer */
 footer{
 	background-color: #121a21;
 	text-align:center;
